--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "nodegui-simple-starter",
-  "version": "1.0.0",
-  "description": "A NodeGui starter project",
+  "name": "tauri-app",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "build": "npm run build-code && npm run build-bundle",
-    "build-code": "tsc",
-    "build-bundle": "esbuild build/main.js --sourcemap --bundle --outfile=dist/main.cjs --platform=node --format=cjs --external:@nodegui/nodegui \"--external:nodegui-plugin-*\"",
-    "clean": "rimraf build dist tmp-jam-pack-nodegui",
-    "package": "jam-pack-nodegui --config packaging/jam-pack-nodegui.json",
-    "run": "qode dist/main.cjs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sedwards2009/nodegui-simple-starter.git"
-  },
-  "keywords": [
-    "nodegui"
-  ],
-  "author": "Simon Edwards",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sedwards2009/nodegui-simple-starter/issues"
-  },
-  "homepage": "https://github.com/sedwards2009/nodegui-simple-starter#readme",
-  "devDependencies": {
-    "@types/node": "^20.3.1",
-    "esbuild": "^0.18.4",
-    "jam-pack-nodegui": "^0.18.0",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.3"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "@nodegui/nodegui": "^0.61.0",
-    "@nodegui/qode": "^18.12.1",
-    "source-map-support": "^0.5.21"
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "sass": "^1.94.2",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.4"
   }
 }
