--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
 {
-    "compilerOptions": {
-        "allowSyntheticDefaultImports": true,
-        "target": "esnext",
-        "module": "ES2020",
-        "declaration": true,
-        "moduleResolution": "node",
-        "noImplicitAny": false,
-        "noImplicitThis": true,
-        "noImplicitReturns": true,
-        "removeComments": false,
-        "sourceMap": true,
-        "noLib": false,
-        "experimentalDecorators": true,
-        "baseUrl": ".",
-        "emitDecoratorMetadata": true,
-        "outDir": "build",
-        "rootDir": "src"
-    },
-    "include": [
-        "./src/**/*.ts"
-    ]
+  "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
